# serializer version: 1
# name: test_button_entities[button.hdfury_vrroom_02_issue_hotplug-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.hdfury_vrroom_02_issue_hotplug',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Issue Hotplug',
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'issue_hotplug',
    'unique_id': '000123456789_issue_hotplug',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_entities[button.hdfury_vrroom_02_issue_hotplug-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 Issue Hotplug',
    }),
    'context': <ANY>,
    'entity_id': 'button.hdfury_vrroom_02_issue_hotplug',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_entities[button.hdfury_vrroom_02_reboot-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.hdfury_vrroom_02_reboot',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reboot',
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'reboot',
    'unique_id': '000123456789_reboot',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_entities[button.hdfury_vrroom_02_reboot-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 Reboot',
    }),
    'context': <ANY>,
    'entity_id': 'button.hdfury_vrroom_02_reboot',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
